--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -9,5 +9,9 @@
   "Register a laboratory" : "Register a laboratory",
   "My Profile" : "My Profile",
   "Logout": "Logout",
-  "validate a test": "validate a test"
+  "validate a test": "validate a test",
+  "English" : "English",
+  "French" : "French",
+  "Spanish" : "Spanish",
+  "Please wait" : "Please wait"
 }
