--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -19,5 +19,85 @@
   "Laboratories" : "Laboratorios",
   "Samplers" : "Coleccionistas",
   "Controllers" : "Controladores",
-  "Register a Sampler" : "Registrar un muestreador"
+  "Register a Sampler" : "Registrar un muestreador",
+  "Profile picture" : "Foto de perfil",
+  "Full Name" : "Nombre completo",
+  "Date of Birth" : "Fecha de nacimiento",
+  "Sex" : "Sexo",
+  "Male" : "Masculino",
+  "Feminine" : "Femenino",
+  "Phone" : "Teléfono",
+  "E-mail adress" : "Dirección de correo electrónico",
+  "Approved center" : "Centro aprobado",
+  "Username" : "Nombre del usuario",
+  "Password" : "Contraseña",
+  "Cancel" : "Anular",
+  "Save" : "Salvar",
+  "List of collectors" : "Lista de coleccionistas",
+  "Name" : "Apellido",
+  "Action" : "Acción",
+  "Modify the sampler" : "Modificar el muestreador",
+  "Register a Controller" : "Registrar un controlador",
+  "Controller type" : "Tipo de controlador",
+  "Airport" : "Aeropuerto",
+  "Border" : "Frontera",
+  "List of controllers" : "Lista de controladores",
+  "Type" : "Tipo",
+  "Modify controller" : "Editar controlador",
+  "Register a Laboratory" : "Registrar un laboratorio",
+  "logo" : "logo",
+  "Laboratory name" : "Nombre del laboratorio",
+  "Select country" : "Seleccionar país",
+  "City" : "Ciudad",
+  "Services" : "Servicios",
+  "Covid19 test" : "Prueba Covid19",
+  "Vaccines" : "Vacunas",
+  "Select the vaccines performed" : "Seleccione las vacunas realizadas",
+  "Account administrator" : "Administrador de cuenta",
+  "List of laboratories" : "Lista de laboratorios",
+  "Search by date" : "Buscar por fecha",
+  "Previous" : "Anterior",
+  "Next" : "Próximo",
+  "Click to fill in the results" : "Haga clic para completar los resultados",
+  "Delete the laboratory" : "Eliminar el laboratorio",
+  "Modify the laboratory" : "Editar laboratorio",
+  "Results" : "Resultados",
+  "Results of my tests" : "Resultados de mis pruebas",
+  "Date" : "Fecha",
+  "Comment" : "Comentario",
+  "IGG test" : "Prueba IGG",
+  "IGM test" : "Prueba IGM",
+  "Positive" : "Positivo",
+  "Negative" : "Negativo",
+  "Results of my vaccines" : "Resultados de mis vacunas",
+  "Laboratory" : "Laboratorio",
+  "Motif du RDV" : "Razón de la cita",
+  "Time of appointment" : "Tiempo de la cita",
+  "Country" : "País",
+  "Date of appointment" : "Fecha de la cita",
+  "Travel information" : "Información de viaje",
+  "Departure country" : "País de salida",
+  "Departure city" : "Ciudad de salida",
+  "Country of arrival" : "País de llegada",
+  "Arrival city" : "Ciudad de llegada",
+  "List of appointments" : "Lista de citas",
+  "Reason" : "Razón",
+  "Time" : "Hora",
+  "Cancel the appointment" : "Cancelar la cita",
+  "Patients" : "Pacientes",
+  "Tests" : "Pruebas",
+  "Tasks" : "Tareas",
+  "Information on patient anonymity" : "Información sobre el anonimato del paciente",
+  "Anonymity number" : "Número de anonimato",
+  "Sample taken" : "Muestra tomada",
+  "Send" : "Enviar",
+  "Patient data" : "Datos del paciente",
+  "Passport number" : "Número de pasaporte",
+  "Passport picture" : "Foto de pasaporte",
+  "Vaccine information" : "Información sobre la vacuna",
+  "Select vaccines" : "Seleccionar vacunas",
+  "Vaccines performed on the patient" : "Vacunas realizadas al paciente",
+  "Check" : "Cheque",
+  "Test Information" : "Información de prueba",
+  "Observations" : "Observaciones"
 }
